--- a/R checks/3_working_paper_outputs.qmd
+++ b/R checks/3_working_paper_outputs.qmd
@@ -1,26 +1,31 @@
 ---
-title: "working_paper_outputs"
+title: "Self-Employed Sample Outputs"
 author: "Todd Nobles"
 format: docx
+execute:
+  echo: false
+  
 ---
 
 Read in our working dataset created in data_prep.qmd
+
+
+
 
 ```{r}
 rm(list = ls())
 library(tidyverse)
 
 se_sample <- readRDS("se_sample.rds")
-se_sample.5 <- readRDS("se_sample_5.rds")
-se_sample_cleanest <- readRDS("se_sample_cleanest.rds") 
-se_sample.5_cleanest <- readRDS("se_sample_5_cleanest.rds")
+# se_sample.5 <- readRDS("se_sample_5.rds")
+# se_sample_cleanest <- readRDS("se_sample_cleanest.rds") 
+# se_sample.5_cleanest <- readRDS("se_sample_5_cleanest.rds")
 ```
 
 
-```{r}
+```{r creating person-level file for summary stats}
 se_sample <- se_sample %>% 
   mutate(y1_status_v2 = factor(y1_status_v2, labels = c("W&S", "Self-Employed", "Unemployed")))
-
 
 person_level <- se_sample %>%
   arrange(ssuid_spanel_pnum, swave, monthcode) %>% 
@@ -53,48 +58,18 @@ person_level <- se_sample %>%
 ```
 
 
-```{r}
-se_sample_cleanest <- se_sample_cleanest %>% 
-  mutate(y1_status_v2 = fct_recode(as_factor(y1_status_v2), "Self-Emp" = "2", "Unemployed"="4", "W&S" = "1"))
 
 
-person_level_clean <- se_sample_cleanest %>%
-  arrange(ssuid_spanel_pnum, swave, monthcode) %>% 
-  # getting to person-year level
-  group_by(ssuid_spanel_pnum, swave) %>%
-  summarize(# the following three are all constant within individuals so we just grab their first value
-    y1_status_v2 = first(y1_status_v2),
-    race_eth_fct_cpsd = first(race_eth_fct_cpsd),
-    sex_fct = first(sex_fct),
-    # here we take their highest education value ever observed 
-    educ_fct = last(educ_fct),
-    tpearn_annual = sum(tpearn),
-    industry = first(industry_fct)) %>% 
-  # summarizing to person-level 
-  group_by(ssuid_spanel_pnum) %>% 
-  summarize(
-    avg_earnings = mean(tpearn_annual),
-    median_earnings = quantile(tpearn_annual, .5),
-    y1_status_v2 = first(y1_status_v2),
-    race_eth_fct_cpsd = first(race_eth_fct_cpsd),
-    sex_fct = first(sex_fct),
-    # here we take their highest education value ever observed 
-    educ_fct = last(educ_fct),
-    industry = first(industry)
-  ) %>%
-  ungroup()
-
-
-```
-
-```{r, setting labels}
-# library(labelled)
-# person_level <- person_level %>%
-#   set_variable_labels(
-#     average_earnings = "Age (years)",
-#     sex = "Gender",
-#     bmi = "Body Mass Index (kg/m²)"
-#   )
+```{r, setting labels for person-level file}
+library(labelled)
+person_level <- person_level %>%
+  set_variable_labels(
+    avg_earnings = "Avg earnings (tpearn)",
+    sex_fct = "Sex",
+    y1_status_v2 = "Initial Status",
+    race_eth_fct_cpsd = "Race/Ethnicity",
+    educ_fct = "Education",
+    industry = "Industry")
 ```
 
 
@@ -106,65 +81,30 @@ library(gtsummary)
 person_level %>%
   select(avg_earnings, race_eth_fct_cpsd, y1_status_v2, educ_fct, sex_fct, industry) %>% 
   tbl_summary(by = y1_status_v2,
-             statistic = list(all_continuous() ~ "{mean} ({sd})")) %>% 
+             statistic = list(all_continuous() ~ "{mean} [{median}] ({sd})")) %>% 
   add_overall()
 ```
 
-
+## Table 2 Summary Statistics for earnings by group
+To create the table below, we use the same dataset as above and generate a person-level average of their annual earnings across years. 
 ```{r}
 library(modelsummary)
-datasummary(avg_earnings*educ_fct ~ mean * y1_status_v2,
-            data = person_level,
-            fmt = fmt_sprintf("%.0f"))
 
-datasummary(avg_earnings*race_eth_fct_cpsd ~ mean * y1_status_v2,
-            data = person_level,
-            fmt = fmt_sprintf("%.0f"))
+datasummary(
+    (` ` = avg_earnings * (Education =educ_fct)) +
+        (` `= avg_earnings * (Race = race_eth_fct_cpsd)) +
+        (` `= avg_earnings * (Sex = sex_fct)) ~ y1_status_v2* (mean+ sd + N) ,
+    data = person_level,
+    fmt = fmt_sprintf("%.0f"),
+    title = 'Earnings Comparison by Demographic Characteristics', 
+    note = "This table displays the group-level averages and standard deviations for the person-level average earnings."
+)
 
-datasummary(avg_earnings*sex_fct ~ mean * y1_status_v2,
-            data = person_level,
-            fmt = fmt_sprintf("%.0f"))
-```
-
-```{r}
-datasummary(avg_earnings*educ_fct ~ mean * y1_status_v2,
-            data = person_level_clean,
-            fmt = fmt_sprintf("%.0f"))
-
-datasummary(avg_earnings*race_eth_fct_cpsd ~ mean * y1_status_v2,
-            data = person_level_clean,
-            fmt = fmt_sprintf("%.0f"))
-
-datasummary(avg_earnings*sex_fct ~ mean * y1_status_v2,
-            data = person_level_clean,
-            fmt = fmt_sprintf("%.0f"))
-```
-
-
-To-dos: 
-- look at annual earnings 
-- test descriptives with weights included 
-- look at regressions, 
-- test regressions with weights included
-
-
-```{r}
 
 ```
 
 
-
-
-
-
-
-
-# Regressions for earnings
-Using person-year level data
-
-https://cran.r-project.org/web/packages/robustlmm/vignettes/rlmer.pdf 
-clubSandwich
-
+Do we get similar results if we use person-year level dataset? 
 
 ```{r function to log transform vars with negative values in them}
 # feed it a vector to convert to log transform that accounts for negative values 
@@ -175,10 +115,9 @@ log_transform <- function(x) {
 ```
 
 
+```{r creating person-year level df }
 
-```{r}
-
-## getting down to a dataset that thas their demographci vars and yearly earnings at the person-year level
+## getting down to a dataset that has their demographic vars and yearly earnings at the person-year level
 temp <- se_sample %>% 
   filter(monthcode %% 12 == 0) %>% 
   select(ssuid_spanel_pnum, 
@@ -206,8 +145,116 @@ temp_earnings <- se_sample %>%
 
 
 person_year <- left_join(temp_earnings, temp, by = c("ssuid_spanel_pnum", "calyear")) %>% 
-  mutate(ln_tpearn_annual = log_transform(tpearn_annual))
+    mutate(ln_tpearn_annual = log_transform(tpearn_annual))
+
 ```
+
+
+```{r setting variable labels for person_year df}
+person_year <- person_year %>%
+  set_variable_labels(
+    ln_tpearn_annual = "Log earnings (tpearn)",
+    sex_fct = "Sex",
+    y1_status_v2 = "Initial Status",
+    race_eth_fct_cpsd = "Race",
+    educ_fct = "Education",
+    unemp_f12_6 = "Unemployed 6-months",
+    industry_fct = "Industry",
+    tage = "Age",
+    immig_fct = "Nativity",
+    calyear = "Year"
+  )
+    
+```
+
+```{r, summary table with person-year level}
+datasummary(
+    (` ` = tpearn_annual * (Education =educ_fct)) +
+        (` `= tpearn_annual * (Race = race_eth_fct_cpsd)) +
+        (` `= tpearn_annual * (Sex = sex_fct)) ~ y1_status_v2* (mean+ sd + N) ,
+    data = person_year,
+    fmt = fmt_sprintf("%.0f"),
+    title = 'Earnings Comparison by Demographic Characteristics', 
+    note = "This table displays the group-level averages and standard deviations for the person-level average earnings."
+)
+```
+
+
+To-dos: 
+- test descriptives with weights included 
+- look at regressions, 
+- test regressions with weights included
+
+
+
+
+
+
+
+
+
+```{r creating survey object for yearly estimates}
+library(survey)
+library(srvyr)
+py_svy <- person_year %>% as_survey_design(ids= ssuid_spanel_pnum, weights = wpfinwgt)
+```
+
+```{r}
+py_svy %>% 
+  group_by(y1_status_v2,educ_fct) %>% 
+  summarize(earnings = survey_mean(tpearn_annual))  %>% 
+  select(-earnings_se) %>% 
+  pivot_wider(
+    names_from = y1_status_v2,
+    values_from = c(earnings),
+    names_sep = "_"
+  ) %>%
+  mutate(across(where(is.numeric), round, digits = 0))  %>%  
+  flextable::flextable()
+
+
+py_svy %>% 
+  group_by(y1_status_v2,race_eth_fct_cpsd) %>% 
+  summarize(earnings = survey_mean(tpearn_annual))  %>% 
+  select(-earnings_se) %>% 
+  pivot_wider(
+    names_from = y1_status_v2,
+    values_from = c(earnings),
+    names_sep = "_"
+  ) %>% 
+  mutate(across(where(is.numeric), round, digits = 0)) %>% 
+  flextable::flextable()
+
+
+py_svy %>% 
+  group_by(y1_status_v2,sex_fct) %>% 
+  summarize(earnings = survey_mean(tpearn_annual))  %>% 
+  select(-earnings_se) %>% 
+  pivot_wider(
+    names_from = y1_status_v2,
+    values_from = c(earnings),
+    names_sep = "_"
+  ) %>% 
+  mutate(across(where(is.numeric), round, digits = 0)) %>% 
+  flextable::flextable()
+
+```
+
+
+
+
+
+
+
+
+# Regressions for earnings
+Using person-year level data
+https://asdfree.com/survey-of-income-and-program-participation-sipp.html
+
+https://cran.r-project.org/web/packages/robustlmm/vignettes/rlmer.pdf 
+clubSandwich
+
+
 
 ```{r}
 library(lme4)
@@ -228,16 +275,45 @@ m2_unemp <- update(m1_unemp, . ~ .  + race_eth_fct_cpsd)
 m3_unemp <- update(m2_unemp, . ~ . + race_eth_fct_cpsd:unemp_f12_6)
 m4_unemp <- update(m2_unemp, . ~ . + sex_fct:unemp_f12_6)
 
+m1_unemp_wt <- lmer(ln_tpearn_annual ~ 
+                   unemp_f12_6  + 
+                   educ_fct + 
+                   tage + 
+                   I(tage^2) + 
+                   sex_fct + 
+                   immig_fct + 
+                   calyear + 
+                   industry_fct + 
+                   (1 | ssuid_spanel_pnum), 
+                 data = person_year,
+                 weights = wpfinwgt)
 
+m2_unemp_wt <- update(m1_unemp_wt, . ~ .  + race_eth_fct_cpsd)
+m3_unemp_wt <- update(m2_unemp_wt, . ~ . + race_eth_fct_cpsd:unemp_f12_6)
+m4_unemp_wt <- update(m2_unemp_wt, . ~ . + sex_fct:unemp_f12_6)
 
 #A more precise p-value can be computed using p.val = "kr"
 # regressions for full sample with y1_status_v2
 ```
 
 
-```{r}
-# options for vcov.fun values https://jepusto.github.io/clubSandwich/reference/vcovCR.html
 
+
+
+
+```{r table unemp earnings regular se}
+sjPlot::tab_model(m1_unemp,
+                   m2_unemp,
+                   m3_unemp,
+                   m4_unemp,
+                  collapse.ci = TRUE,  
+                  p.style = "stars", 
+                  prefix.labels = "label")
+```
+
+
+```{r table unemp earnings robust se }
+# options for vcov.fun values https://jepusto.github.io/clubSandwich/reference/vcovCR.html
 sjPlot::tab_model( m1_unemp,
                    m2_unemp,
                    m3_unemp,
@@ -249,15 +325,44 @@ sjPlot::tab_model( m1_unemp,
 ```
 
 
-```{r}
-sjPlot::tab_model(m1_unemp,
-                   m2_unemp,
-                   m3_unemp,
-                   m4_unemp,
+```{r table unemp earnings regular se weighted}
+sjPlot::tab_model( m1_unemp_wt,
+                   m2_unemp_wt,
+                   m3_unemp_wt,
+                   m4_unemp_wt,
                   collapse.ci = TRUE,  
                   p.style = "stars", 
                   prefix.labels = "label")
+
+
 ```
+
+
+
+
+
+
+
+```{r table unemp earnings robust se weighted }
+sjPlot::tab_model( m1_unemp_wt,
+                   m2_unemp_wt,
+                   m3_unemp_wt,
+                   m4_unemp_wt,
+                  collapse.ci = TRUE,  
+                  p.style = "stars", 
+                  prefix.labels = "label", 
+                  vcov.args = list(cluster = person_year$ssuid_spanel_pnum), vcov.fun = "CR1" )
+```
+
+
+
+
+
+
+
+
+
+
 
 
 ```{r}
